--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^9.0.6",
+    "@angular-devkit/schematics": "^9.0.6",
     "@angular/animations": "~9.0.6",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
@@ -19,6 +21,7 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@schematics/angular": "^9.0.6",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
