--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@angular-devkit/core": "^9.0.6",
     "@angular-devkit/schematics": "^9.0.6",
     "@angular/animations": "~9.0.6",
+    "@angular/cdk": "^9.1.2",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
+    "@angular/material": "^9.1.2",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@schematics/angular": "^9.0.6",
+    "ngx-ghosts": "^0.4.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
